--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/camera": "^7.0.2",
+    "@capacitor/core": "^7.4.2",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
